--- a/index.htm
+++ b/index.htm
@@ -25,8 +25,10 @@ mention that part to us, do they? - George Carlin
 Great minds discuss ideas; average minds discuss events;
 small minds discuss people. - Eleanor Roosevelt
 </div>
+<p id="link">
 <a href="https://www.brainyquote.com/" target="_blank">
 Brainy Quote
 </a>
+</p>
 </body>
 </html>
